--- a/manifest.plist
+++ b/manifest.plist
@@ -10,9 +10,9 @@
                 <dict>
                     <key>kind</key>
                     <string>software-package</string>
+                    <!-- LINK IPA ĐẦY ĐỦ VỚI TẤT CẢ THAM SỐ -->
                     <key>url</key>
-                    <!-- LINK IPA ĐẦY ĐỦ -->
-                    <string>https://dl.dropboxusercontent.com/scl/fi/t7qy7ntqam7wcdvutdrvt/Linhcute.ipa?rlkey=tnu9ns19a2aiyrcdbtyldycn1&st=ajw2fhyw</string>
+                    <string>https://dl.dropboxusercontent.com/scl/fi/t7qy7ntqam7wcdvutdrvt/Linhcute.ipa?rlkey=tnu9ns19a2aiyrcdbtyldycn1&amp;st=ajw2fhyw</string>
                 </dict>
             </array>
             <key>metadata</key>
