--- a/manifest.plist
+++ b/manifest.plist
@@ -12,7 +12,7 @@
                     <string>software-package</string>
                     <!-- LINK IPA ĐẦY ĐỦ VỚI TẤT CẢ THAM SỐ -->
                     <key>url</key>
-                    <string>https://www.transfernow.net/dl/20251207NLFGX9bj</string>
+                    <string>https://drive.google.com/uc?export=download&id=1w9EmVZUdF4GzfyQYEJN1dSePg-FZSm3V</string>
                 </dict>
             </array>
             <key>metadata</key>
