--- a/manifest.plist
+++ b/manifest.plist
@@ -10,9 +10,9 @@
                 <dict>
                     <key>kind</key>
                     <string>software-package</string>
-                    <!-- LINK IPA ĐẦY ĐỦ VỚI TẤT CẢ THAM SỐ -->
+                    <!-- LINK GOOGLE DRIVE TRỰC TIẾP -->
                     <key>url</key>
-                    <string>https://drive.google.com/uc?export=download&id=1w9EmVZUdF4GzfyQYEJN1dSePg-FZSm3V</string>
+                    <string>https://drive.google.com/uc?export=download&amp;id=1w9EmVZUdF4GzfyQYEJN1dSePg-FZSm3V</string>
                 </dict>
             </array>
             <key>metadata</key>
