--- a/manifest.plist
+++ b/manifest.plist
@@ -24,7 +24,7 @@
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>Linhcute</string>
+                <string>LinhcuteV2</string>
             </dict>
         </dict>
     </array>
